...

	override func viewDidLoad() {
		super.viewDidLoad()
		setUpNavigationController()
		monthCollectionView.delegate = self
		monthCollectionView.dataSource = self
		monthCollectionView.accessibilityIdentifier = "monthPicker"
	}

	func setUpNavigationController() {
		self.navigationController?.interactivePopGestureRecognizer?.delegate = self
		self.navigationController?.interactivePopGestureRecognizer?.isEnabled = true
		self.navigationController?.navigationBar.isTranslucent = false
...
