...
	// Colours / Tints
	static let tableViewCellColor: String = "cellColor"
	static let searchBarColor: String = "searchBar"
	static let likeButtonColor: String = "likeButton"
	static let inSeasonColor: String = "inSeason"
	static let nonSeasonColor: String = "nonSeason"
	static let menuBarColor: String = "menuBar"
	static let menuBarSelectedColor: String = "menuBarSelected"
	static let navigationBarColor: String = "navigationBar"

	// Videos
	static let lightWelcomeVideo: String = "lightwelcomevideo"
	static let darkWelcomeVideo: String = "darkwelcomevideo"
...
