...
		if let cell: MenuBarCollectionViewCell = collectionView.dequeueReusableCell(withReuseIdentifier: Constants.MenuBarCell, for: indexPath) as? MenuBarCollectionViewCell {

			cell.updateViews(viewModel: viewModel?.menuBarCells[indexPath.item])

			#if DEBUG
			if CommandLine.arguments.contains("enable-testing"), indexPath == [0, 8] {
				cell.accessibilityIdentifier = "cancelCell"
			}
			#endif
			return cell
		}

		return MenuBarCollectionViewCell()
...
